# ez-tickets-order-api

./: .gitmodules  Cargo.toml  Makefile.toml  deny.toml
app-cmd/: Cargo.toml
app-cmd/src/: adapter.rs  errors.rs  lib.rs
app-cmd/src/services/: order.rs
app-query/: Cargo.toml
driver/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: errors.rs  lib.rs
kernel/src/entities/: order.rs  table.rs
kernel/src/entities/order/: id.rs  product_id.rs  quantity.rs
kernel/src/entities/table/: id.rs  name.rs
kernel/src/io/: event.rs
kernel/src/io/command/: order.rs  table.rs
kernel/src/io/event/: order.rs  table.rs
kernel/src/services/: product.rs
server/: Cargo.toml
server/src/: errors.rs  lib.rs  logging.rs  main.rs
