[package]
name = "app-cmd"
version = "0.1.0"
edition = "2021"
publish = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }

kernel = { path = "../kernel" }

[dependencies.nitinol]
workspace = true
features = [
  "process",
  "projection"
]