[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
publish = { workspace = true }
license = { workspace = true }

[dependencies]
uuid = { version = "^1", features = ["serde", "v4"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

async-trait = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }

tracing = { workspace = true }

[dependencies.nitinol]
workspace = true
features = [
  "macro",
  "process",
  "persistence",
  "projection",
  "eventstream",
]